[package]
name = "deploy-tool"
version = "0.1.0"
authors = ["Derek Ellis <derek@llamabagel.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
shiplift = "0.6"
clap = "2.33"
rocket = "0.4"
log = "0.4"
env_logger = "0.7"
bollard = "0.8"
tokio = "0.2"